tests/Checker/everything/errors/27b.vc
void f(int a, int b, boolean c, int d) { return; }

int main() {
    f(1, 2, 3, 4);
    return 1;
}
